# BMAD

./: integration-test.js
.bmad-core/: install-manifest.yaml
.claude/: settings.local.json
.clinerules/: 01-bmad-master.md  03-pm.md  04-analyst.md  05-architect.md  06-po.md  07-sm.md  09-qa.md  10-ux-expert.md
bioai-workspace/: CLERK_SETUP.md  DEVELOPMENT.md  ENABLE_PYTHON_SERVICE.md  NGROK_AUTO_DETECTION.md  PYTHON_SERVICE_SETUP.md  README.md  check-ngrok-status.sh  install-ngrok.sh  package-lock.json  package.json  private_key_pkcs8.pem  start-python-tunnel.sh  tailwind.config.js  test-api-key.js  tsconfig.app.json  vite.config.ts
docs/: prd.md  (+1 more)
python-langgraph-service/: .env.example  .gitignore  Dockerfile  README.md  demo_chat_logging.py  docker-compose.yml  pyproject.toml
python-langgraph-service/app/: __init__.py  config.py  engine.py  main.py
python-langgraph-service/app/agents/: __init__.py  base_agent.py  conversation_agent.py  langgraph_engine.py  langgraph_multi_agent_engine.py  molecular_analysis_agent.py  orchestration_agent.py  pdb_search_agent.py
python-langgraph-service/app/api/v1/: __init__.py  molecular_analysis.py  ngrok.py  settings.py  test.py  workflow.py
python-langgraph-service/app/core/: chat_logger.py  health.py  middleware.py
python-langgraph-service/app/tools/: __init__.py  molecular_analysis.py  pdb_search.py  small_molecule_analysis.py  structure_comparison.py
python-langgraph-service/docs/: CHAT_LOGGING.md
python-langgraph-service/scripts/: start-dev.sh
python-langgraph-service/tests/: __init__.py  test_health.py
(+171 files in other folders)
